// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VolunteersCard /> renders correctly with social network links 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row p-4 max-w-[390px] min-w-[288px] w-full rounded-[4px] border-solid border-t-[3px] border-primary-dark bg-gray-lightest shadow"
  >
    <img
      alt="Scooby Doo"
      class="bg-white rounded-[50%] mr-4"
      data-nimg="1"
      decoding="async"
      height="70"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75 2x"
      style="color: transparent;"
      width="70"
    />
    <div
      class="flex flex-col justify-between"
    >
      <div
        class="flex flex-col"
      >
        <p
          class="text-black text-sm tablet:text-base "
          data-testid=""
        >
          Scooby Doo
        </p>
        <p
          class="text-black text-sm tablet:text-base mt-[0.1rem] text-primary-dark"
          data-testid=""
        >
          Detective
        </p>
      </div>
      <div
        class="flex flex-row"
      >
        <a
          class="mr-4"
          href="https://www.twitter.com/scoobydoo"
          target="_self"
        >
          <img
            alt="Twitter icon"
            class="h-5 w-5"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          class="mr-4"
          href="https://www.linkedin.com/in/scoobydoo_engineer"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Linkedin icon"
            class="h-5 w-5"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          class="mr-4"
          href="https://www.instagram.com/scoobydoo_detective"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Instagram icon"
            class="h-5 w-5"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          class="mr-4"
          href="https://github.com/scoobydoo"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Github icon"
            class="h-5 w-5"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<VolunteersCard /> renders correctly without social network links 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row p-4 max-w-[390px] min-w-[288px] w-full rounded-[4px] border-solid border-t-[3px] border-primary-dark bg-gray-lightest shadow"
  >
    <img
      alt="Scooby Doo"
      class="bg-white rounded-[50%] mr-4"
      data-nimg="1"
      decoding="async"
      height="70"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75 2x"
      style="color: transparent;"
      width="70"
    />
    <div
      class="flex flex-col justify-between"
    >
      <div
        class="flex flex-col"
      >
        <p
          class="text-black text-sm tablet:text-base "
          data-testid=""
        >
          Scooby Doo
        </p>
        <p
          class="text-black text-sm tablet:text-base mt-[0.1rem] text-primary-dark"
          data-testid=""
        >
          Detective
        </p>
      </div>
      <div
        class="flex flex-row"
      />
    </div>
  </div>
</DocumentFragment>
`;
